# Multi-agent-code-review

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
sandbox/: README.md
skills/multi-agent-coder/: CLAUDE.md  run.py  skill.json
src/: config.py  graph.py  llm.py  main.py  persistence.py  state.py  ui.py
src/agents/: coder.py  executor.py  executor_docker.py  independent_executor.py  planner.py  reviewer.py  tester.py  validator.py
src/tools/: github.py
tests/: test_config.py  test_graph.py  test_persistence.py
