[project]
name = "multi-agent-code-review"
version = "0.1.0"
description = "Multi-agent autonomous code generation pipeline with planner, coder, reviewer, and tester agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.38.0",
    "langchain-google-genai>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
